--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 /*body*/
 body, html{
+    background-color: aliceblue;
     font-family: 'Times New Roman', Times;
     font-size: large;
     line-height: 1.5;
