--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ a:active {
 }
 
 /*Navigation*/
-.nav {
+.nav, #tableOperationsMenu{
     display: flex;
     justify-content: space-around;
 
@@ -99,9 +99,7 @@ div p {
     content: ')';
 }
 
-
 /*Lists*/
-
     /*Dictionary*/
 dl  {
     margin-left: 30px;
@@ -109,6 +107,10 @@ dl  {
 
 dt {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+dt > h3 {
+    font-size: larger;
 }
 
 dd {
