--- a/style.css
+++ b/style.css
@@ -36,10 +36,13 @@ a:active {
 
 /*Navigation*/
 .nav, #tableOperationsMenu{
-    display: flex;
     justify-content: space-around;
-
     background-color: var(--onyx);
+    display: none;
+}
+
+.nav.active, #tableOperationsMenu.active{
+    display: flex;
 }
 
 .nav a{
@@ -97,6 +100,10 @@ div p {
 
 .info-i::after{
     content: ')';
+}
+
+#github-icon, #bars-icon {
+    font-size: 200% !important;
 }
 
 /*Lists*/
@@ -242,22 +249,6 @@ thead {
 .content-conteiner ol{
     position: relative;
     left: 40%;
-}
-
-iframe {
-    float: right;
-    width: 900px; height: 570px;
-    margin-top: 18px;
-}
-
-/*Buttons*/
-button {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    width: 100%;
-    font-size: large;
-    padding: 5px;
-    background-color: var(--onyx);
-    color: white;
 }
 
 /*Drag'n'Drop*/
